pkg/deps/testdata/ub/project/invalid/missing-version.ub
project: {
  requires: {
    'github.com/x/y': {
      indirect: true
    }
  }
}
